--- a/trace/Makefile
+++ b/trace/Makefile
@@ -5,7 +5,7 @@ EXTRA_CFLAGS := -g
 
 KDIR := /lib/modules/$(shell uname -r)/build
 all:
-	make -C $(KDIR) M=$(PWD) modules 
+	make -C $(KDIR) M=$(shell pwd) modules
 clean:
 	rm -f *.ko *.o *.mod.o *.mod.c .*.cmd *.symvers  modul*
 
